--- a/example.ipynb
+++ b/example.ipynb
@@ -2,14 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from docstr_md.python import PySoup, compile_md\n",
     "\n",
-    "soup = PySoup('src/test.py', parser='sklearn')\n",
+    "soup = PySoup(path='test/__init__.py', parser='sklearn')\n",
     "md = compile_md(soup, compiler='sklearn', outfile='docs_md/test.md')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'test.'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.import_path"
    ]
   },
   {
